Closed Bug 790417 Opened 13 years ago Closed 13 years ago

ContentParent::GetAll should include the preallocated process

Categories

(Core :: IPC, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla18

People

(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)

References

Details

(Whiteboard: [LOE:S])

Attachments

(1 file)

This is because e.g. nsPermissionManager::AddInternal informs content processes of a change in permissions by iterating over ContentParent::GetAll(). This is also needed to get memory reports out of the pre-allocated process.
Assignee: nobody → justin.lebar+bug
Attached patch Patch, v1Splinter Review
Attachment #660218 - Flags: review?(jones.chris.g)
Blocks: 781724
Blocks: 788021
Comment on attachment 660218 [details] [diff] [review] Patch, v1 Nice catch.
Attachment #660218 - Flags: review?(jones.chris.g) → review+
Whiteboard: [LOE:S]
I think this was innocent and just got swept up in one of my "I can't tell which is at fault" backouts, in https://hg.mozilla.org/integration/mozilla-inbound/rev/80f9522602c5, and I think that was actually a backout for bug 788021. But, I can't tell which is at fault for everything, only that that seems to have been for the debug xpcshell crashes.
I think it was innocent, but it's no problem that it was backed out. Re-landed in https://hg.mozilla.org/integration/mozilla-inbound/rev/a7e4753e3c3c
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: