Bug 790417 - ContentParent::GetAll should include the pre-allocated process. r=cjones