dom/ipc/ContentParent.cpp
@@ -405,6 +405,10 @@ ContentParent::GetAll(nsTArray<ContentParent*>& aArray)
     if (gAppContentParents) {
         gAppContentParents->EnumerateRead(&AppendToTArray, &aArray);
     }
+
+    if (sPreallocatedAppProcess) {
+        aArray.AppendElement(sPreallocatedAppProcess);
+    }
 }
 
 void
